# duckicelake

./: .gitignore  ARCHITECTURE.md  GOVERNANCE.md  MISSING.md  OPERATIONS.md  README.md  duckicelake.toml.example  duckicelake_governance.md  governance_phase2.md  pixi.toml  pyproject.toml  smcp.toml.example
.github/workflows/: ci.yml
docs/: REFERENCE.md  actor_aware_governance.md  file_layer_no_sts.md  multi_catalog_isolation.md
scripts/: governance_demo.sh  lakesh_demo.sh  minio.sh  pg.sh  probe_searchpath.py  seed_events.py  sql_proof.py
src/duckicelake/: __init__.py  auth.py  bootstrap.py  bounds.py  catalog.py  config.py  duckdb_client.py  governance.py  governance_api.py  hetzner_policy.py  iceberg.py  iceberg_transforms.py  manifest.py  masked_export.py  masking_views.py  materialize.py  mcp_server.py  models.py  notify.py  observability.py  partition_sort.py  pg_rls.py  policies.py  puffin.py  pyiceberg_v3.py  read_manifest.py  registry.py  s3_gateway.py  s3util.py  seed.py  server.py  signer.py  smcp_interface.py  smoke.py  sts.py  types.py
tests/: conftest.py  test_cache_and_observability.py  test_catalog_registry.py  test_catalog_surface.py  test_config.py  test_governance.py  test_governance_actor.py  test_governance_lifecycle.py  test_governance_phase3.py  test_governance_phase4.py  test_governance_security.py  test_hetzner_policy.py  test_multi_catalog.py  test_multi_catalog_http.py  test_notify_materialise.py  test_puffin.py  test_remote_signing.py  test_s3_gateway_unit.py  test_signer_unit.py  test_smcp_interface.py  test_sts_unit.py
