[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckicelake"
version = "0.1.0"
description = "Iceberg v3 REST Catalog proxy on top of DuckLake"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pydantic>=2.9",
  "duckdb>=1.4",
  "psycopg[binary]>=3.2",
  "orjson>=3.10",
  "pyarrow>=18",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/duckicelake"]

[tool.hatch.build.targets.wheel.sources]
"src/duckicelake" = "duckicelake"
